// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeekBar when it is at the end it renders correctly 1`] = `
<div
  className="css-1tbhals"
>
  <input
    className="css-19h4nxv"
    max={10}
    onChange={[Function]}
    size="0.2em"
    step="any"
    type="range"
    value={10}
  />
  <div
    className="css-z5eujh"
  />
</div>
`;

exports[`SeekBar without currentTime and duration it renders correctly 1`] = `
<div
  className="css-1tbhals"
>
  <input
    className="css-19h4nxv"
    max={10}
    onChange={[Function]}
    size="0.2em"
    step="any"
    type="range"
    value={9}
  />
  <div
    className="css-pvxstt"
  />
</div>
`;

exports[`SeekBar without props it renders correctly 1`] = `
<div
  className="css-1tbhals"
>
  <input
    className="css-19h4nxv"
    max={0}
    onChange={[Function]}
    size="0.2em"
    step="any"
    type="range"
    value={0}
  />
  <div
    className="css-1voc2x1"
  />
</div>
`;
